added code from new website

--- a/src/components/SidePanel.astro
+++ b/src/components/SidePanel.astro
@@ -1,24 +1,24 @@
 ---
 const projects = [
 	{
-		title: 'DaiLai',
-		url: 'http://dailai.io/',
-		description: 'Peer to Peer Microtransport Listing Services'
+		title: 'WLog Network',
+		url: 'https://wlog.network',
+		description: 'Decentralized logging and monitoring infrastructure'
 	},
 	{
-		title: '0ffl1ne',
-		url: 'http://www.freshpatents.com/-dt20160728ptan20160218873.php',
+		title: '0FFL1NE KeyVault',
+		url: 'https://patents.google.com/patent/US20160218873A1/en?inventor=Ian+Spiro',
 		description: 'Patent pending, prototype offline data diode system controller for secure cryptographic storage and access.'
 	},
 	{
-		title: '2crow',
-		url: 'http://2crow.org/',
-		description: 'A 2 party escrow system for bitcoin.'
+		title: 'DogPay',
+		url: 'https://dogpay.info',
+		description: 'Secure cryptocurrency payment processing system'
 	},
 	{
-		title: 'Noomer',
-		url: 'http://noomer.io/',
-		description: 'Wiki based Numeraire and price provider'
+		title: 'Valswappa',
+		url: 'https://valswappa.com/',
+		description: 'Walletless front-end for the Thor Network, used and trusted by the DeFi community as a bridge.'
 	},
 	{
 		title: 'Woodcoin.Info',
