--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -18,14 +18,14 @@ const projects = [
 		description: 'Secure cryptocurrency payment processing system'
 	},
 	{
-		title: 'DaiLai',
-		url: 'http://dailai.io/',
-		description: 'Peer to Peer Microtransport Listing Services'
+		title: 'Valswappa',
+		url: 'https://valswappa.com/',
+		description: 'Walletless front-end for the Thor Network, used and trusted by the DeFi community as a bridge.'
 	},
 	{
-		title: '0ffl1ne',
-		url: 'http://www.freshpatents.com/-dt20160728ptan20160218873.php',
-		description: 'Patent pending offline data diode system'
+		title: '0FFL1NE KeyVault',
+		url: 'https://patents.google.com/patent/US20160218873A1/en?inventor=Ian+Spiro',
+		description: 'Patent pending offline data diode system controller for secure cryptographic storage'
 	}
 ];
 
