added code from new-website

--- a/src/components/SidePanel.astro
+++ b/src/components/SidePanel.astro
@@ -6,8 +6,8 @@ const projects = [
 		description: 'Decentralized logging and monitoring infrastructure'
 	},
 	{
-		title: '0ffl1ne',
-		url: 'http://www.freshpatents.com/-dt20160728ptan20160218873.php',
+		title: '0FFL1NE KeyVault',
+		url: 'https://patents.google.com/patent/US20160218873A1/en?inventor=Ian+Spiro',
 		description: 'Patent pending, prototype offline data diode system controller for secure cryptographic storage and access.'
 	},
 	{
