--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,6 +17,8 @@ import { SITE_TITLE } from '../consts';
 		<Header />
 		<main class="px-4 py-12 max-w-7xl mx-auto">
 			<div class="flex flex-col md:flex-row items-start gap-12">
+		<main class="px-4 py-12 max-w-7xl mx-auto">
+			<div class="flex flex-col md:flex-row items-start gap-12">
 				<img 
 					src="/vtscc-coin.png" 
 					alt="VSCC Logo" 
