--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,8 +21,14 @@ const projects = [
 		title: 'Valswappa',
 		url: 'https://valswappa.com/',
 		description: 'Walletless front-end for the Thor Network, used and trusted by the DeFi community as a bridge.'
+		title: 'Valswappa',
+		url: 'https://valswappa.com/',
+		description: 'Walletless front-end for the Thor Network, used and trusted by the DeFi community as a bridge.'
 	},
 	{
+		title: '0FFL1NE KeyVault',
+		url: 'https://patents.google.com/patent/US20160218873A1/en?inventor=Ian+Spiro',
+		description: 'Patent pending offline data diode system controller for secure cryptographic storage'
 		title: '0FFL1NE KeyVault',
 		url: 'https://patents.google.com/patent/US20160218873A1/en?inventor=Ian+Spiro',
 		description: 'Patent pending offline data diode system controller for secure cryptographic storage'
